# posix-shell

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  a.sh  b.sh  combined.txt  config.status  configure  configure.ac  configure~  diff.out  dum.out  ewqe  file.out  file1  file2  filemake  for_test.sh  my_fun_err.out  out;  script.sh  test  test.c  test.sh  test.txt  test2.txt
42sh-1.0/: Makefile.am  README.md  aclocal.m4  configure
42sh-1.0/src/: 42sh.c
42sh-1.0/src/ast/: Makefile.am  expansion.c
42sh-1.0/src/builtins/: Makefile.am  commands.c  commands.h  continue.c  dot.c  exit.c  run_command.c  run_command.h  true_and_false_builtin.c  unset.c
42sh-1.0/src/lexer/: lexer.c  lexer.h  splitter.c  splitter.h  token.h
42sh-1.0/src/mbtstr/: Makefile.am  mbt_cview_contains.c  mbt_cview_fprint.c  mbt_str_ctor.c  mbt_str_dtor.c  mbt_str_pop.c  mbt_str_pushc.c  mbt_str_pushcv.c  view.h
42sh-1.0/src/streams/: Makefile.am  dstream.c  dstream.h  streams.c  streams.h
42sh-1.0/tests/: Makefile.am  regression.sh
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
merge_in_progress/src/: 42sh.c
merge_in_progress/tests/: backslash.sh  export.sh  while_test.sh
src/: 42sh  42sh.c  Makefile  Makefile.am  Makefile.in  hs24.h  test.sh
src/.deps/: 42sh-42sh.Po
src/ast/: Makefile  Makefile.am  Makefile.in  ast.c  ast.h  expansion.c  expansion.h  old
src/ast/expansion/: expansion.c  expansion.h  vars.c  vars.h
src/ast/expansion/.deps/: libast_a-expansion.Po  libast_a-vars.Po
src/ast/nodes/: .cword.c.swo  .list.h.swp  .simple_command.c.swp  and_or.c  and_or.h  ast_simple_cmd.h  clist.c  clist.h  command.c  command.h  cword.c  cword.h  element.c  element.h  else.c  else.h  eval_ctx.c  eval_ctx.h  for.c  for.h  fundec.c  fundec.h  if.c  if.h  input.c  input.h  ionumber.c  ionumber.h  list.c  list.h  node.c  node.h  pipeline.c  pipeline.h  prefix.c  prefix.h  redirection.c  redirection.h  redirection_definition.c  redirection_definition.h  (+17 more)
src/ast/nodes/.deps/: libast_a-and_or.Po  libast_a-clist.Po  libast_a-command.Po  libast_a-cword.Po  libast_a-element.Po  libast_a-else.Po  libast_a-eval_ctx.Po  libast_a-for.Po  libast_a-fundec.Po  libast_a-if.Po  libast_a-input.Po  libast_a-ionumber.Po  libast_a-list.Po  libast_a-node.Po  libast_a-pipeline.Po  libast_a-prefix.Po  libast_a-redirection.Po  libast_a-redirection_stdin.Po  libast_a-redirection_stdout.Po  libast_a-shell_command.Po  libast_a-simple_command.Po  libast_a-simple_command_execute_builtin.Po  libast_a-simple_command_execute_non_builtin.Po  libast_a-until.Po  libast_a-while.Po
src/builtins/: Makefile  Makefile.am  Makefile.in  break.c  builtins.h  cd.c  commands.c  commands.h  continue.c  dot.c  echo.c  export.c  run_command.c  run_command.h  true_and_false_builtin.c  unset.c
src/builtins/.deps/: libbuiltins_a-break.Po  libbuiltins_a-cd.Po  libbuiltins_a-commands.Po  libbuiltins_a-continue.Po  libbuiltins_a-dot.Po  libbuiltins_a-echo.Po  libbuiltins_a-exit.Po  libbuiltins_a-export.Po  libbuiltins_a-run_command.Po  libbuiltins_a-true_and_false_builtin.Po  libbuiltins_a-unset.Po
src/eval/: Makefile.am  eval.c  eval.h
src/lexer/: .lexer.c.swp  Makefile  Makefile.am  Makefile.in  double_backslash.c  double_backslash.h  lexer.c  lexer.h  shard.c  shard.h  split_comments.c  split_comments.h  split_operator.c  split_operator.h  split_redir.c  split_redir.h  splitter.c  splitter.h  splitter_ctx.c  token.c  token.h
src/lexer/.deps/: liblex_a-lexer.Po  liblex_a-shard.Po  liblex_a-splitter.Po  liblex_a-splitter_ctx.Po
src/mbtstr/: Makefile  Makefile.am  Makefile.in  mbt_cview_fprint.c  mbt_str_dtor.c  mbt_str_fill.c  mbt_str_free.c  mbt_str_init.c  mbt_str_merge.c  mbt_str_pushc.c  mbt_str_pushcstr.c  str.h  utils.h
src/mbtstr/.deps/: libmbtstr_a-mbt_str_ctor.Po  libmbtstr_a-mbt_str_dtor.Po  libmbtstr_a-mbt_str_fill.Po  libmbtstr_a-mbt_str_free.Po  libmbtstr_a-mbt_str_init.Po  libmbtstr_a-mbt_str_merge.Po  libmbtstr_a-mbt_str_pop.Po  libmbtstr_a-mbt_str_pushc.Po  libmbtstr_a-mbt_str_pushcstr.Po
src/mbtstr/src/: mbt_cview_cmp.c  mbt_str_ctor.c  mbt_str_pushcv.c  str.h  utils.h  view.h
src/parser/: Makefile.am  parser.c  parser.h
src/streams/: Makefile  Makefile.am  Makefile.in  dstream.c  dstream.h  streams.c  streams.h
src/streams/.deps/: libstreams_a-dstream.Po  libstreams_a-streams.Po
src/utils/: Makefile  Makefile.am  Makefile.in  err_utils.h  eval_output_structure.c  eval_output_structure.h  fill_input.c  hash_map.c  hash_map.h  linked_list.c  linked_list.h  logger.c  logger.h  mergestr.h  my_itoa.c  my_itoa.h  my_strcat.c  my_strcat.h  mypipe.c  mypipe.h  naming.c  naming.h  stack.h  test_lexer.c  test_lexer.h
src/utils/.deps/: libutils_a-fill_input.Po  libutils_a-hash_map.Po  libutils_a-linked_list.Po  libutils_a-logger.Po  libutils_a-mergestr.Po  libutils_a-my_itoa.Po  libutils_a-mypipe.Po  libutils_a-naming.Po  libutils_a-stack.Po  libutils_a-xalloc.Po
tests/: &  3  Makefile  Makefile.am  Makefile.in  break.sh  builtins_tests.c  continue.sh  diff_err.out  err.txt  for_test.sh  regression.sh  script.sh  splitter_tests  splitter_tests.c  step1.sh  test_dot.sh  testsuite.sh  token_tests  token_tests.c  var.sh  while_expr.sh  while_test.sh
tests/step2/: step2.sh
tests/step2/assignement_substitution/: a.sh  b.sh  var_1.sh  var_2.sh  var_5.sh
tests/step2/loops/: until_1.sh  while_1.sh
tests/step2/quoting/: backslash.sh  double.sh  double3.sh  double4.sh  double5.sh
tests/step2/special_var/: args.sh  args1.sh  dollar_dollar.sh  env.sh  hell.sh  q_mark_1.sh  q_mark_2.sh
tests/step3/: step3.sh
tests/step3/functions/: another_fct_test.sh  archive_encrypt.sh  args.sh  conflict.sh  file.sh  imbricated.sh  imbricated_def.sh  mix.sh  packed.sh  redef.sh  some1.sh  some2.sh  some3.sh  spe_var.sh  test_function_in_func_with_param.sh  test_function_with_parameters.sh  test_with_subshell.sh  test_with_subshell2.sh  unpacked.sh
tests/step3/subshell/: classic.s  classic.sh  test2.sh
tests/syntax/bad/: tests.sh
tests/syntax/good/: tests.sh
(+82 files in other folders)
