lib_LIBRARIES = libast.a

libast_a_SOURCES =  \
  ast.h \
  nodes/eval_ctx.h \
  nodes/eval_ctx.c \
  expansion/vars.h \
  expansion/vars.c \
  nodes/and_or.c \
  nodes/and_or.h \
  nodes/cword.c \
  nodes/cword.h \
  nodes/element.c \
  nodes/element.h \
  nodes/if.c \
  nodes/if.h \
  nodes/input.c \
  nodes/input.h \
  nodes/list.c \
  nodes/list.h \
  nodes/node.c \
  nodes/pipeline.c \
  nodes/pipeline.h \
  nodes/clist.c \
  nodes/clist.h \
  nodes/fundec.c \
  nodes/fundec.h \
  nodes/shell_command.c \
  nodes/shell_command.h \
  nodes/simple_command.h \
  nodes/simple_command.c \
  nodes/command.c \
  nodes/command.h \
  nodes/simple_command_execute_builtin.c \
  nodes/simple_command_execute_builtin.h \
  nodes/simple_command_execute_non_builtin.c \
  nodes/simple_command_execute_non_builtin.h \
  nodes/redirection.c \
  nodes/redirection.h \
  nodes/prefix.c \
  nodes/prefix.h \
  nodes/else.c \
  nodes/else.h \
  nodes/pipeline.c \
  nodes/pipeline.h \
  nodes/while.c \
  nodes/while.h \
  nodes/until.c \
  nodes/until.h \
  nodes/for.c \
  nodes/for.h \
  nodes/cword.c \
  nodes/cword.h \
  nodes/redirection_stdin.h \
  nodes/redirection_stdin.c \
  nodes/redirection_stdout.c \
  nodes/redirection_stdout.h \
  nodes/redirection_definition.h \
  nodes/redirection_definition.c \
  nodes/node.h 

libast_a_CPPFLAGS = -I$(top_srcdir)/src

libast_a_CFLAGS = -std=c99 -Werror -Wall -Wextra -Wvla -pedantic -g -O0 

noinst_LIBRARIES = libast.a
